--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <h1>
-Prethina Rajathilagam
+Prithina Rajathilagam
 </h1>
 
 <h2>
@@ -43,3 +43,4 @@ Will you be my Valentine and make me the happiest guy ever? 💖💖💖
 <script src="script.js"></script>
 </body>
 </html>
+
